# log-it

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  wsgi.py
log_it/: __init__.py  app.py  extensions.py
log_it/auth/: views.py
log_it/configs/: config.cfg.template  default.py  testing.py
log_it/display/: navigation.py  views.py
log_it/extensions/: __init__.py  classful.py
log_it/extensions/marshmallow/: __init__.py  log.py  user.py
log_it/fixtures/: permissions.py  roles.py
log_it/log/: model.py
log_it/templates/: layout.html
log_it/templates/auth/: login.html
log_it/user/: model.py
log_it/utils/: database.py  helpers.py  populate.py
tests/: cmd_options.py  conftest.py  test_log_it.py
tests/fixtures/: application.py  data.py  database.py  user.py
tests/unit/: test_database.py
tests/unit/utils/: test_helpers.py  test_populate.py
