[tool.poetry]
name = "log-it"
version = "0.1.0"
description = "Manual log entries"
authors = ["John teBokkel <tanj.tanj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^20.3.0"
SQLAlchemy = "^1.3.22"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.4.4"
requests = "^2.25.1"
furl = "^2.1.0"
Authlib = "^0.15.2"
Flask-Security-Too = "^3.4.4"
SQLAlchemy-Utils = "0.36.7"
boltons = "^20.2.1"
psycopg2 = {version = "^2.8.6", optional = true}
Flask-Bootstrap = "^3.3.7"
Flask-Classful = "^0.14.2"
flask-nav = {git = "https://github.com/tanj/flask-nav.git", rev = "gh-27_fix-abc-import"}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
Flask-DebugToolbar = "^0.11.0"
pre-commit = "^2.9.3"
pytest-mock = "^3.3.1"
coverage = {version = "^5.3", extras = ["toml"]}

[tool.poetry.extras]
postgres = ["psycopg2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["log_it"]

[tool.pytest.ini_options]
junit_family = "xunit2"